overflow hidden fix

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ html{
   overflow-x: hidden;
 }
 
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
 
 /* scrollbar */
 
